--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "test:lcp": "npm run build && playwright test -c playwright.preview.config.ts tests/e2e/lcp.spec.ts",
     "test:e2e": "playwright test",
     "test:unit": "vitest run",
     "test:unit:watch": "vitest"
